--- a/templates/profile.html
+++ b/templates/profile.html
@@ -182,7 +182,8 @@
     <script src="../static/functions.js" type="text/javascript"></script>
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
-    <script src="../static/ban.js" type="text/javascript"></script>
-    <div id="banned-words" style="display: none;">{{ banned_words|tojson|safe }}</div>
+    <!--
+    <script src="../static/ban.js" type="text/javascript" data-banned-words='{{ banned_words|tojson|safe }}'></script>
+  -->
   </body>
 </html> 
