--- a/static/header.css
+++ b/static/header.css
@@ -92,7 +92,7 @@
     border-radius: 50%;
     cursor: pointer;
     transition: opacity 0.3s;
-    margin-top: 0; 
+    margin: 0; 
     display: block;
   }
   
