fixed the double message + broken links

--- a/templates/buy_listings.html
+++ b/templates/buy_listings.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/listings">Post a Swipe to Buy</a> 
+        <a href="/buy_listings">Post a Swipe to Buy</a> 
       </header>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
