Revert "fixed the double message + broken links"
This reverts commit 0322c4fd5425d3a6033c805861383eb673475c6a.

--- a/templates/sell_listings.html
+++ b/templates/sell_listings.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/sell_listings">Post a Swipe to Sell</a> 
+        <a href="/listings">Post a Swipe to Sell</a> 
       </header>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
