Revert "remove green on button"
This reverts commit 61b0a4a4c7f8795fa24dd63186ed0c6bbb460c3d.

--- a/templates/buy_listings.html
+++ b/templates/buy_listings.html
@@ -162,7 +162,7 @@
               <label for="price">Price:</label>
               <div class="price-input-wrapper">
                 <span class="dollar-sign">$</span>
-                <input type="number" id="price" name="price" min="0" step="0.50" placeholder="0 or more" required>
+                <input type="number" id="price" name="price" min="0" step="0.50" placeholder="Enter price" required>
               </div>
             </div>
             
