--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -116,6 +116,7 @@
       .offer-button, .request-button {
         font-size: 18px;
         padding: 6px 12px;
+        background-color: green;
       }
   
       .button-group {
