--- a/templates/sell_listings.html
+++ b/templates/sell_listings.html
@@ -162,7 +162,7 @@
               <label for="price">Price:</label>
               <div class="price-input-wrapper">
                 <span class="dollar-sign">$</span>
-                <input type="number" id="price" name="price" min="0" step="0.50" placeholder="0 or more" required>
+                <input type="number" id="price" name="price" min="0" step="0.50" placeholder="Enter price" required>
               </div>
             </div>
             
