Revert "allow non users to see form"
This reverts commit 0052eea84e73182eeffb95b5cc1056d4e92f31c5.

--- a/templates/sell_listings.html
+++ b/templates/sell_listings.html
@@ -87,7 +87,7 @@
       </header>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
-          <form id="listingForm" action="/submit_seller" method="POST" onsubmit="return requireSignIn(event)">
+          <form id="listingForm" action="/submit_seller" method="POST">
             <div class="form-group">
               <label>Dining hall:</label>
               <div class="checkbox-group two-columns">
