--- a/templates/profile.html
+++ b/templates/profile.html
@@ -182,5 +182,6 @@
     <script src="../static/functions.js" type="text/javascript"></script>
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
+    <script src="../static/profile.js" type="text/javascript"></script>
   </body>
 </html> 
