--- a/templates/profile.html
+++ b/templates/profile.html
@@ -183,5 +183,6 @@
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
     <script src="../static/profile.js" type="text/javascript"></script>
+    <script src="../static/block.js" type="text/javascript"></script>
   </body>
 </html> 
