edited how it works

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,15 +85,14 @@
             </p>
             <ul>
               <li>
-                Option 1: fill out the "post listing" form to add 
-                details about a swipe you're looking to buy or sell. This 
-                will add a new entry to one of the tables below, and potential 
-                buyers/sellers will be able to contact you.
+                Option 1: if you see a swipe below that you'd like to buy or sell, 
+                click the "get this swipe" or "swipe them in" button to be 
+                automatically put in touch with the person who posted it.
               </li>
               <li>
-                Option 2: if you see a swipe below that you'd like to buy 
-                or sell, click the "get this swipe" or "swipe them in" 
-                button to be automatically put in touch with the person who posted it.
+                Option 2: if you’d like to add a listing to one of the tables 
+                below, click the “post buy/sell listing” button and fill out the 
+                form. Potential buyers/sellers will then be able to contact you.
               </li>
             </ul>
             <p>
