--- a/templates/index.html
+++ b/templates/index.html
@@ -70,10 +70,7 @@
       </header>
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
-        <a href="/sell_listings">
-          <button type="button" class="sell-button" id="postListingsButton">Sell a Swipe</button>
-        </a>
-        <button type="button" class="buy-button" id="buyListingsButton" onclick="if(requireSignIn(event)) window.location.href='/buy_listings'">Buy a Swipe</button>
+        <button type="button" class="post-button" id="postListingsButton" onclick="if(requireSignIn(event)) window.location.href='/post_listings'">Post Buy/Sell Listing</button>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
