--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
         <button type="button" class="post-button" id="postListingsButton" onclick="if(requireSignIn(event)) window.location.href='/post_listings'">Post Buy/Sell Listing</button>
-        <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
+        <button type="button" class="how-it-works-button" id="howItWorksButton">How It Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
         <div class="how-it-works-content">
