--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/edit_listing/{{ listing.id }}">Edit Listing</a> 
+        Edit Listing
       </header>
         <section style="max-width: 800px; margin: 20px auto; padding: 20px;">
             <div class="seller-form">
