double error message on the form when not logged in

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
       </header>
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
-        <button type="button" class="post-button" id="postListingsButton" onclick="if(requireSignIn(event)) window.location.href='/post_listings'">Post Buy/Sell Listing</button>
+        <button type="button" class="post-button" id="postListingsButton">Post Buy/Sell Listing</button>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How It Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
@@ -87,8 +87,8 @@
                 automatically put in touch with the person who posted it.
               </li>
               <li>
-                Option 2: if you’d like to add a listing to one of the tables 
-                below, click the “post buy/sell listing” button and fill out the 
+                Option 2: if you'd like to add a listing to one of the tables 
+                below, click the "post buy/sell listing" button and fill out the 
                 form. Potential buyers/sellers will then be able to contact you.
               </li>
             </ul>
