--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -168,7 +168,7 @@
               <label for="price">Price:</label>
               <div class="price-input-wrapper">
                 <span class="dollar-sign">$</span>
-                <input type="number" id="price" name="price" min="0" step="0.50" placeholder="Enter price" required>
+                <input type="number" id="price" name="price" min="0" step="0.5" placeholder="Enter price" required onchange="this.value = parseFloat(this.value).toFixed(2)">
               </div>
             </div>
             
