lets non users see form

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
       </header>
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
-        <button type="button" class="post-button" id="postListingsButton">Post Buy/Sell Listing</button>
+        <a href="/post_listings" class="post-button" id="postListingsButton">Post Buy/Sell Listing</a>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How It Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
