--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -163,7 +163,7 @@
                         <label for="price">Price:</label>
                         <div class="price-input-wrapper">
                             <span class="dollar-sign">$</span>
-                            <input type="number" id="price" name="price" min="0" step="0.5" value="{{ listing.price }}" required pattern="^\d+(\.\d{1,2})?$">
+                            <input type="number" id="price" name="price" min="0" step="0.01" value="{{ listing.price }}">
                         </div>
                     </div>
                     <div class="form-group">
