--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -6,6 +6,7 @@
     <title>Post Listings</title>
     <link rel="stylesheet" href="../static/header.css">
     <link rel="stylesheet" href="../static/general.css">
+    <link rel="stylesheet" href="../static/swipemarket.css">
     <link rel="stylesheet" href="../static/phonestyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
