X button on how it works popup

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,7 @@
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
         <div class="how-it-works-content">
+          <button class="close-button" onclick="closeHowItWorksPopup()">&times;</button>
           <p style="line-height: 1.6; text-align: justify;">
             <p>
               Swipe Market is an online marketplace that connects students 
