--- a/static/general.css
+++ b/static/general.css
@@ -163,8 +163,8 @@ div{
 
 .close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0;
+  right: 0;
   width: 24px;
   height: 24px;
   border-radius: 50%;
