--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -165,7 +165,7 @@
             </div>
             
             <div class="form-group">
-              <label for="price">Price:</label>
+              <label for="price">Price ($0 to donate):</label>
               <div class="price-input-wrapper">
                 <span class="dollar-sign">$</span>
                 <input type="number" id="price" name="price" min="0" step="0.01" placeholder="Enter price">
