--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -246,6 +246,7 @@
 
       .how-it-works-popup {
         font-size: 12px;
+        margin: 0 20px 20px 20px; /* top right bottom left */
       }
       
   }
