--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
       </header>
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
-        <a href="/post_listings" class="post-button" id="postListingsButton">Post Buy/Sell Listing</a>
+        <a href="/post_listings" class="post-button" id="postListingsButton">Post Listing</a>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How It Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
@@ -88,7 +88,7 @@
               </li>
               <li>
                 Option 2: if you'd like to add a listing to one of the tables 
-                below, click the "post buy/sell listing" button and fill out the 
+                below, click the "post listing" button and fill out the 
                 form. Potential buyers/sellers will then be able to contact you.
               </li>
             </ul>
