--- a/templates/index.html
+++ b/templates/index.html
@@ -82,12 +82,12 @@
             </p>
             <ul>
               <li>
-                Option 1: if you see a swipe below that you'd like to buy or sell, 
+                Browse Listings: if you see a swipe below that you'd like to buy or sell, 
                 click the "get this swipe" or "swipe them in" button to be 
                 automatically put in touch with the person who posted it.
               </li>
               <li>
-                Option 2: if you'd like to add a listing to one of the tables 
+                Post Listing: if you'd like to add a listing to one of the tables 
                 below, click the "post listing" button and fill out the 
                 form. Potential buyers/sellers will then be able to contact you.
               </li>
@@ -136,7 +136,7 @@
           </tr>
           {% else %}
           <tr>
-            <td colspan="6">No listings available at the moment.</td>
+            <td colspan="6">Nothing available now - check back soon or post your own listing</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -177,7 +177,7 @@
           </tr>
           {% else %}
           <tr>
-            <td colspan="6">No listings available at the moment.</td>
+            <td colspan="6">Nothing available now - check back soon or post your own listing</td>
           </tr>
           {% endfor %}
         </tbody>
