removed repetition/mistake on error check

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,9 @@
                 below, click the "post listing" button and fill out the 
                 form. Potential buyers/sellers will then be able to contact you.
               </li>
+              <li>
+                Listings automatically expire once the end time has passed but you can edit and delete them at any time before then.
+              </li>
             </ul>
             <p>
               Once we send an email connecting you to your buyer/seller, 
