small profile/edit bugs

--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        Edit Listing
+        <a href="/edit_listing">Edit Listing</a> 
       </header>
         <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
             <div class="seller-form">
