--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -89,7 +89,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/post_listings">Post a Buy/Sell Listing</a> 
+        <a href="/post_listings">Post Listing to Buy or Sell</a> 
       </header>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
