--- a/templates/profile.html
+++ b/templates/profile.html
@@ -146,7 +146,7 @@
             <input type="email" id="email" name="email" placeholder="Your email" readonly>
           </div>
           <div>
-            <label for="name">Preferred Name</label>
+            <label for="name">Display Name</label>
             <input type="text" id="name" name="name" placeholder="Your name">
           </div>
           <div>
